<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GX购物记</string>
    <string name="create_shop">创建商家</string>
    <string name="create_good">增加商品</string>
    <string name="fix_good">修改商品</string>
    <string name="shopping_history">购物历史</string>
    <string name="search_condition">筛选条件</string>
    <string name="shopping_statistics">购物统计</string>
    <string name="statistics_result">统计结果</string>
    <string name="shop_schedule">购物计划</string>
    <string name="tip">提示</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string> 
    <string name="add">增加</string> 
    <string name="delete">删除</string> 
    <string name="fix">修改</string> 
    <string name="save">保存</string> 
	<string name="cancel">取消</string>
	<string name="back">返回</string>
	<string name="unlimit">不限</string>
	<string name="filter">筛选</string>
	<string name="detail">详情</string>
	<string name="feedback1">反馈</string>
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
    <string name="create_record">创建记录</string>
    <string name="old_record">以往记录</string>
    <string name="shop_category">商家类别:</string>
    <string name="shop_name">商家名称:</string>
    <string name="goods_category">商品类别:</string>
    <string name="goods_name">商品名称:</string>
    <string name="click_choice">点击选择</string>
    <string name="add_category">添加类别</string>
    <string name="input_category">输入类别</string>
    <string name="input_name">输入名称</string>
    <string name="add_shop">添加商家</string>
    <string name="category_choice">类别选择</string>
    <string name="shop_choice">商家选择</string>
    <string name="goods_choice">商品选择</string>
    <string name="fix_shop">修改商家</string>
    <string name="goods_price">商品单价: </string>
    <string name="goods_sum">商品总价: </string>
    <string name="price_for_yuan">元</string>
    <string name="goods_discount">商品打折: </string>
    <string name="start_date">起始日期: </string>
    <string name="end_date">截止日期: </string>
    <string name="discount_for_yuan">%</string>
    <string name="goods_number">商品数量: </string>
    <string name="add_goods">添加商品</string>
    <string name="input_price">输入价格</string>
    <string name="input_discount">输入打折</string>
    <string name="input_number">输入数量</string>
    <string name="all_record">所有记录</string>
    <string name="I_want_shopping">购物</string>
    <string name="date">日期: </string>
    <string name="date_choice">日期选择</string>
    <string name="history_search">搜索</string>
    <string name="date_format">yyyy年MM月dd日</string>
    <string name="info_confirm_to_exit">确定要退出GX购物记?</string>
    <string name="info_confirm_to_main">确定要回到主菜单?</string>
    <string name="no_shop_record">暂无购物记录</string>
    <string name="no_goods_record">暂无商品记录</string>
    <string name="no_plan_record">暂无计划记录</string>
    <string name="last_shop_time">购物时间:</string>
    <string name="plan_shop_time">计划时间:</string>
    <string name="buy_date">购物日期:</string>
    <string name="info_no_category_for_choice">没有类别可以选择！</string>
    <string name="info_choice_category_first">请先选择类别！</string>
    <string name="info_not_safe_date">输入的日期非法！</string>
    <string name="no_search_condition">所有条件不限</string>
    <string name="reset_all_condition">重置所有条件</string>
    <string name="info_can_not_empty_category">商家类别不能为空！</string>
    <string name="info_can_not_empty_name">商家名称不能为空！</string>
    <string name="info_confirm_delete_this_item">确定删除本条目？</string>
    <string name="info_fiter_condition">筛选条件：</string>
    <string name="sign_for_yuan">￥</string>
    <string name="info_goods_detail_notify_bar">当前总过有%1$s件商品，总过花了%2$s元</string>
    <string name="info_plan_goods_detail_notify_bar">当前总过有%1$s件商品</string>
    <string name="list_load_more">点击加载更多...</string>
    <string name="setting">应用设置</string>
    <string name="about">关于软件</string>
    <string name="feedback">购物统计</string>
    <string name="info_about">GX移动团队感谢您对我们产品的使用和信赖，我们将尽力做到最好。\r\nMSN：snowmanxxf@hotmail.com\r\n邮箱：snowmanxxf@sina.com</string>
    <string name="info_merchant_category">商家类别</string>
    <string name="info_goods_category">商品类别</string>
    <string name="child_category">子类别</string>
    <string name="info_result_statistics">总过有%1$d笔消费记录，总过消费%2$s元</string>
    <string name="has_finish">已完成</string>
    <string name="not_finish">未完成</string>
    <string name="plan_price">预期单价:</string>
    <string name="plan_number">预期数量:</string>
    <string name="dan_wei">单位</string>
    <string name="choose_dan_wei">选择单位</string>
</resources>
