<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent" 
  	android:background="@drawable/round_listview_bg" 
  	>
  	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView style="@style/title_label_style"
			android:id="@+id/title"
			android:text="@string/create_good"
			android:layout_centerInParent="true" />
		<Button style="@style/common_button"
			android:id="@+id/corfirm"
			android:text="@string/add"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip" />
		<Button style="@style/common_button"
			android:id="@+id/cancel"
			android:text="@string/back"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip" />
	</RelativeLayout>
	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:layout_marginTop="12dip"
  		android:layout_marginLeft="8dip"
  		android:layout_marginRight="8dip"
  		android:orientation="vertical"
  		android:layout_weight="1" >
	  	<LinearLayout style="@style/linearlayout_for_choice"
	  		android:id="@+id/choice_category_view"
	  		android:background="@drawable/form_row_input_top" >
	  		<TextView style="@style/category_name"
	  			android:text="@string/goods_category"/>
	  		<TextView style="@style/click_choice_text" 
	  			android:id="@+id/choice_category" 
	  			android:layout_width="fill_parent"
	  			android:layout_weight="1"
	  			android:layout_marginLeft="5dip"
	  			android:text="@string/click_choice" />
	  		<ImageView
	  			android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_marginTop="4dip"
	  			android:src="@drawable/arrow_down" />
	  	</LinearLayout>
	  	<LinearLayout style="@style/linearlayout_for_choice"
	  		android:id="@+id/choice_name_view" 
	  		android:background="@drawable/form_row_input_middle" >
	  		<TextView style="@style/category_name"
	  			android:text="@string/goods_name"/>
	  		<TextView style="@style/click_choice_text" 
	  			android:id="@+id/choice_name"
	  			android:layout_width="fill_parent"
	  			android:layout_weight="1"
	  			android:layout_marginLeft="5dip"
	  			android:text="@string/click_choice"  />
	  		<ImageView
	  			android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_marginTop="4dip"
	  			android:src="@drawable/arrow_down" />
	  	</LinearLayout>
	  	<LinearLayout style="@style/linearlayout_for_choice"
	  		android:id="@+id/set_price_view" 
	  		android:background="@drawable/form_row_input_middle" >
	  		<TextView style="@style/category_name"
	  			android:text="@string/plan_price"/>
	  		<LinearLayout
	  			android:layout_width="fill_parent"
	  			android:layout_height="wrap_content"
	  			android:layout_weight="1" >
		  		<TextView style="@style/click_choice_text" 
		  			android:layout_marginLeft="5dip"
		  			android:id="@+id/set_price" />
		  		<TextView style="@style/click_choice_text" 
		  			android:id="@+id/set_price"
		  			android:text="@string/price_for_yuan" />
	  		</LinearLayout>
	  		<ImageView
	  			android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_marginTop="4dip"
	  			android:src="@drawable/arrow_down" />
	  	</LinearLayout>
	  	<LinearLayout 
	  		style="@style/linearlayout_for_choice"
	  		android:id="@+id/set_number_view" 
	  		android:background="@drawable/form_row_input_buttom" 
	  		>
	  		<TextView style="@style/category_name"
	  			android:text="@string/plan_number"/>
	  		<LinearLayout 
	  			android:layout_width="fill_parent"
	  			android:layout_height="wrap_content"
	  			android:layout_weight="1"
	  			android:orientation="horizontal"
	  			android:gravity="center_vertical"
	  			>
		  		<TextView 
		  			style="@style/click_choice_text" 
		  			android:layout_width="wrap_content"
		  			android:layout_marginLeft="5dip"
		  			android:id="@+id/set_number" 
		  			android:gravity="center"
		  			/>
		  		<Button
					android:id="@+id/dan_wei"
					android:text="@string/dan_wei"
					android:textColor="@color/black"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="3dip"
					android:layout_marginRight="5dip" 
					/>
			</LinearLayout>
	  		<ImageView
	  			android:layout_width="wrap_content"
	  			android:layout_height="wrap_content"
	  			android:layout_marginTop="4dip"
	  			android:src="@drawable/arrow_down" />
	  	</LinearLayout>
  	</LinearLayout>
</LinearLayout>
