<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/round_listview_bg"
	>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView 
			style="@style/title_label_style"
			android:text="@string/shopping_history"
			android:layout_centerInParent="true" 
			/>
		<Button 
			style="@style/common_button"
			android:id="@+id/back"
			android:text="@string/back"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip" 
			/>
		<Button 
			style="@style/common_button"
			android:id="@+id/search"
			android:text="@string/filter"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip" 
			/>
	</RelativeLayout>
	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >
        <TextView	
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:gravity="center"
        	android:id="@+id/show_no_tip"
        	android:text="@string/no_shop_record"
        	android:textSize="20dip"
        	android:textColor="@color/darkgray"
        	android:layout_centerInParent="true" 
        	/>
        <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
			android:id="@+id/topnotifybar"
			android:background="@drawable/tishi_bg"
			android:textSize="15dip"
			android:textColor="@color/black"
			android:gravity="center_vertical"
			android:paddingLeft="5dip"
			android:singleLine="true"
			android:ellipsize="end" 
			android:visibility="gone"
			/>
        <ListView 
        	style="@style/common_listview"
        	android:layout_below="@id/topnotifybar"
	        android:id="@+id/recent_list" />
		<ProgressBar 
			android:id="@+id/recent_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
	</RelativeLayout>
</LinearLayout>
