<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/about_relative_layout_bg" >
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView style="@style/title_label_style"
			android:text="@string/about"
			android:layout_centerInParent="true" />
		<Button style="@style/common_button"
			android:id="@+id/back"
			android:text="@string/back"
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip" />
	</RelativeLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center_vertical" >
		<TextView
			android:id="@+id/about_text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="9dip"
			android:textSize="22dip"
			android:gravity="center"
			android:textColor="@color/black"
			/>
		<ImageView 
			android:layout_width="fill_parent"
			android:layout_height="3dip"
			android:layout_marginLeft="6dip"
			android:layout_marginRight="6dip"
			android:background="@drawable/title_shadow_line"
			/>  
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/info_about"
			android:textColor="@android:color/black"
			android:textSize="18dip"
			android:padding="20dip"
			/>
	</LinearLayout>
</LinearLayout>
