<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/round_listview_bg"
	>
    <RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/title_bg"
		android:gravity="center_vertical"
		>
		<Button 
			style="@style/common_button"
			android:id="@+id/back"
			android:text="@string/back"
			android:layout_marginLeft="5dip"
			android:layout_centerVertical="true"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/shop_schedule"
			android:gravity="center"
			android:padding="8dip"
			android:textSize="24dip"
			android:textColor="@color/white"
			android:singleLine="true"
			android:ellipsize="end" 
			android:layout_centerInParent="true"
			/>
	</RelativeLayout>
	<RelativeLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<TextView	
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:gravity="center"
        	android:id="@+id/show_no_tip"
        	android:text="@string/no_plan_record"
        	android:textSize="20dip"
        	android:textColor="@color/darkgray"
        	android:layout_centerInParent="true" 
        	/>
		<ListView 
			style="@style/common_listview" 
			android:id="@+id/book_history_list" 
			/>
		<ProgressBar 
			android:id="@+id/progress"
			style="?android:attr/progressBarStyleLarge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_centerInParent="true"
			android:visibility="gone"
	      	/>
	</RelativeLayout>
</LinearLayout>
