<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:gravity="center_horizontal"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		>
		<Button 
			style="@style/date_choice_button"
			android:id="@+id/year_date_add"
			android:text="+" 
			/>
		<EditText 
			style="@style/date_choice_edit"
			android:maxLength="4"
			android:id="@+id/year_edit"
			android:layout_width="68dip"
			android:layout_height="wrap_content" 
			/>
		<Button 
			style="@style/date_choice_button"
			android:id="@+id/year_date_reduce"
			android:text="-" 
			/>
	</LinearLayout>
	<TextView 
		style="@style/date_choice_text"
		android:text="@string/year" 
		/>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
		<Button 
			style="@style/date_choice_button"
			android:id="@+id/month_date_add"
			android:text="+" 
			/>
		<EditText 
			style="@style/date_choice_edit"
			android:id="@+id/month_edit"
			android:maxLength="2"
			android:layout_width="40dip"
			android:layout_height="wrap_content" 
			/>
		<Button 
			style="@style/date_choice_button"
			android:id="@+id/month_date_reduce"
			android:text="-" 
			/>
	</LinearLayout>
	<TextView 
		style="@style/date_choice_text"
		android:text="@string/month" 
		/>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
		<Button 
			style="@style/date_choice_button"
			android:id="@+id/day_date_add"
			android:text="+" />
		<EditText 
			style="@style/date_choice_edit"
			android:id="@+id/day_edit"
			android:maxLength="2"
			android:layout_width="40dip"
			android:layout_height="wrap_content" 
			/>
		<Button 
			style="@style/date_choice_button"
			android:id="@+id/day_date_reduce"
			android:text="-" 
			/>
	</LinearLayout>
	<TextView 
		style="@style/date_choice_text"
		android:text="@string/day" 
		/>
</LinearLayout>
