<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" 
	android:background="@drawable/round_listview_bg" 
	>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/title_bg"
		android:gravity="center_vertical"
		>
		<Button 
			style="@style/common_button"
			android:id="@+id/back"
			android:text="@string/back"
			android:layout_marginLeft="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip" 
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="8dip"
			android:textSize="24dip"
			android:textColor="@color/white"
			android:layout_weight="1"
			android:singleLine="true"
			android:ellipsize="end"
			android:id="@+id/title" 
			/>
		<Button style="@style/common_button"
			android:id="@+id/add_goods"
			android:text="@string/add_goods"
			android:layout_marginRight="5dip"
			android:layout_marginTop="5dip"
			android:layout_marginBottom="5dip" 
			/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:gravity="center_vertical" 
		android:background="@drawable/date_bar_bg"
		>
		<ImageButton 
			style="@style/common_image_button"
			android:id="@+id/pre_date" 
			android:background="@drawable/pre_date_image_button" 
			/>
		<TextView 
			android:id="@+id/date"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:gravity="center"
			android:textSize="17dip" 
			android:textColor="@color/white" />
		<ImageButton 
			style="@style/common_image_button"
			android:id="@+id/next_date" 
			android:background="@drawable/next_date_image_button" 
			/>
	</LinearLayout>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1" 
		>
		<TextView	
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:gravity="center"
        	android:id="@+id/show_no_tip"
        	android:text="@string/no_goods_record"
        	android:textSize="20dip"
        	android:textColor="@color/darkgray"
        	android:layout_centerInParent="true" 
        	/>
        <TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
			android:id="@+id/topnotifybar"
			android:background="@drawable/tishi_bg"
			android:textSize="15dip"
			android:textColor="@color/black"
			android:gravity="center_vertical"
			android:paddingLeft="5dip"
			android:singleLine="true"
			android:ellipsize="end" 
			/>
		<ListView 
			style="@style/common_listview" 
			android:layout_below="@id/topnotifybar"
			android:id="@+id/detail_list" 
			/>
	</RelativeLayout>
</LinearLayout>
